finally fixed height and odin banner alignment

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
   background-image: url(./img/cow-crop.jpeg);
   width: 35vw;
   background-repeat: no-repeat;
-  background-size: 129%;
+  background-size: cover;
   display: flex;
   flex-direction: column;
   font-family: Arial, Helvetica, sans-serif;
@@ -35,11 +35,12 @@ body {
   flex-direction: column;
   background-color: #233142;
   width: 65vw;
+  height: 100vh;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .first {
-  height: 25vh;
+  height: 33vh;
   display: flex;
   justify-content: flex-start;
   align-items: flex-end;
@@ -50,7 +51,7 @@ body {
 
 .second {
   background-color: #455d7a;
-  height: 28vh;
+  height: 33vh;
   align-items: center;
   color: #e3e3e3;
   box-shadow: 0px 5px #1a2531;
@@ -108,7 +109,7 @@ label {
 }
 
 .third {
-  height: 28vh;
+  height: 33vh;
   margin: 5%;
 }
 
@@ -140,7 +141,7 @@ p {
 }
 
 .forImage {
-  height: 31.5vh;
+  height: 32.5vh;
   display: flex;
   align-items: flex-end;
 }
